Changes for 1.7
* Fixed bug where you could move a destroyer after it had killed a sub, during noncombat move. (veqryn)

* Updating text xml's and adding TWW xml for new tests. (veqryn)

* Fixing bug in air movement validation for complex movement cases. (veqryn)

* Fixing several memory leaks related to game notes staying in memory multiple times. (veqryn)

* Creating Edit Mode for Grid Based games like chess, checkers, and go. (veqryn)

* Added feature to automatically parse HTML text in game notes and in notifications, and replace all image links with links to the map folder's "doc/images/" directory, thereby allowing local image files to be used. (veqryn)

* Adding ability to specify when the attacker should retreat after how many rounds, to the battle calculator. (veqryn)

* Added fields for average number of rounds, average attacking units left when attacker won, and average defending units left when defender won, to the battle calculator. (veqryn)

* Added new Edit option to change political relationships between players. (veqryn)

* Created option in game 'View' menu to change the font size and font colors of things like territory names, pu's, unit count, and factory damage count. (veqryn)

* Fixed serious bug with process runner util that prevented a new classpath from being used, most notably preventing the 'old jars' from getting run. (veqryn)

* Creating a method in IDisplay to send messages to all player's computers, but only once per computer. Also includes ability to send to certain players only. (veqryn)

* Forced all non-returning void dialogs to run in a separate process as to not block the game from moving forward. 

* Forced all UI interactions to either go through a single thread, or wait for thread to finish, so as not to have multiple popups at same time. (veqryn)

* Creating simple message dialog report for end of turn collection of PUs and national objectives and any blockade action. (veqryn)
